charon/tests/ui/match_on_opaque_enum.out
error: reading the discriminant of an opaque enum. Add `--include test_crate::Enum` to the `charon` arguments to translate this enum.
  --> tests/ui/match_on_opaque_enum.rs:9:5
   |
9  | /     match x {
10 | |         Enum::A => true,
11 | |         Enum::B => false,
12 | |     }
13 | | }
   | |_^

error: aborting due to 1 previous error

ERROR Compilation encountered 1 errors
